--- a/posts/package.json
+++ b/posts/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start" : "nodemon index.js"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Osman CEKIC",
@@ -15,5 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.1",
+    "typescript": "^5.1.6"
   }
 }
