--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A sandbox for learning nodejs microservices",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "dev": "nodemon --config nodemon.json src/server.ts"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ocekic/Microservice-sandbox.git"
@@ -17,6 +17,35 @@
   },
   "homepage": "https://github.com/ocekic/Microservice-sandbox#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/config": "^3.3.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.195",
+    "@types/nanoid": "^3.0.0",
+    "@types/node": "^20.4.2",
+    "@types/pino": "^7.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
+    "nanoid": "^4.0.2",
+    "nodemon": "^3.0.1",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.0.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
