--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --config nodemon.json src/server.ts"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ocekic/Microservice-sandbox.git"
@@ -28,10 +28,13 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.4.2",
     "@types/pino": "^7.0.5",
+    "prisma": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -40,6 +43,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.9",
     "express": "^4.18.2",
+    "g": "^2.0.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
