--- a/users/package.json
+++ b/users/package.json
@@ -7,8 +7,7 @@
     "start:build:": "tsc -w",
     "start:run": "nodemon ./dist/index.js",
     "start": "concurrently npm:start:*",
-    "build":"tsc"
-
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -28,9 +27,11 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "mongodb": "^5.7.0",
     "nanoid": "^4.0.2",
     "nodemon": "^3.0.1",
     "pino": "^8.14.1",
