--- a/sell_objects/package.json
+++ b/sell_objects/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^5.7.0",
+    "mongoose": "^7.4.0",
     "nanoid": "^4.0.2",
     "nodemon": "^3.0.1",
     "pino": "^8.14.1",
