--- a/sell_objects/package.json
+++ b/sell_objects/package.json
@@ -7,7 +7,8 @@
     "start:build:": "tsc -w",
     "start:run": "nodemon ./dist/index.js",
     "start": "concurrently npm:start:*",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "ts-node-dev src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -51,6 +52,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.4.2",
     "@types/pino": "^7.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
